--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.17.0
   firebase_core: ^1.20.0
   firebase_database: ^9.0.20
+  get_it: ^7.2.0
+  rxdart: ^0.26.0
 
 dev_dependencies:
   flutter_test:
